# bored-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  bored.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  bored.rockspec  bored_sdk.lua  bored_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  bored_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  bored_sdk.py  bored_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  result.py
py/entity/: activity_entity.py
py/feature/: audit_feature.py  log_feature.py  metrics_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_activity_direct.py  test_activity_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_options.py  make_point.py  make_response.py  make_url.py  param.py  prepare_body.py  prepare_path.py  register.py  result_headers.py  transform_response.py
rb/: AGENTS.md  Bored_sdk.gemspec  Bored_sdk.rb  Bored_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
(+412 files in other folders)
